tests/snapshots/run_wpt_conformance__coreml_greater_float16_broadcast_2D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater.https.any.js greater float16 broadcast 2D to 4D, coreml
 greater :: greater float16 broadcast 2D to 4D: index 3: actual=0 expected=1 tolerance=0
  inputs: inputA: [-5.39453125, -7.1875, -3.107421875, 4.9765625, 5.11328125, -1.5390625, 1.4140625, -0.93603515625, -6.03125, -3.013671875, 0.1708984375, 7.39453125, 7.1796875, -4.828125, -2.01953125, -3.267578125, 8.9453125, -5.93359375, 0.70703125, 2.77734375, 0.97900390625, -6.25390625, 4.41015625, -6.7734375]; inputB: [-2.685546875, 6.171875, 9.484375, -2.5546875, -2.04296875, 8.53125]
  expected output: [0, 0, 0, 1, 1, 0, 1, 0, 0, 0 ...] (len=24)
  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)
  expected output full nd:
[0, 0, 0, 1, 1, 0, 1, 0, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 2, 2, 3];
    inputB: f16[2, 3];
  }

  nodes {
    [output] = greater(inputA, inputB, label="");
  }

  outputs { output; }
}
