tests/snapshots/run_wpt_conformance__coreml_greater_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater.https.any.js greater float32 1D constant tensors, coreml
 greater :: greater float32 1D constant tensors: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-5.394711494445801, -7.189248561859131, -3.1081764698028564, 4.977657318115234, 5.111654281616211, -1.5386580228805542, 1.414366364479065, -0.9362112283706664, -6.029961585998535, -3.0134198665618896, 0.170855313539505, 7.395327091217041, 7.178691864013672, -4.826237678527832, -2.020440101623535, -3.267888069152832, 8.944384574890137, -5.932100772857666, 0.7069857120513916, 2.7764203548431396, 0.978833794593811, -6.254901885986328, 4.409034729003906, -6.775286674499512] (constant); inputB: [-6.155234336853027, -4.023341178894043, 5.9525980949401855, 2.306623697280884, -2.7692291736602783, -0.9711201190948486, 1.222206711769104, 4.590261459350586, 9.101232528686523, -4.997007846832275, -4.80729341506958, 8.919360160827637, 0.9005027413368225, -2.8414556980133057, -2.8280413150787354, 8.47984504699707, -7.84067964553833, 9.213960647583008, 4.982365131378174, -2.507319211959839, -4.518013954162598, 8.351094245910645, -6.161073207855225, 0.7364829182624817] (constant)
  expected output: [1, 0, 0, 1, 1, 0, 1, 0, 0, 1 ...] (len=24)
  actual output: [0, 0, 128, 63, 0, 0, 0, 0, 0, 0 ...] (len=24)
  expected output full nd:
[1, 0, 0, 1, 1, 0, 1, 0, 0, 1, ...] (len=24, shape=[24])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[24])

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[24] @bytes([122, 161, 172, 192, 83, 14, 230, 192, 93, 236, 70, 192, 248, 72, 159, 64, 172, 146, 163, 64, 191, 242, 196, 191, 245, 9, 181, 63, 138, 171, 111, 191, 114, 245, 192, 192, 223, 219, 64, 192, 178, 244, 46, 62, 133, 166, 236, 64, 216, 183, 229, 64, 138, 112, 154, 192, 228, 78, 1, 192, 20, 37, 81, 192, 51, 28, 15, 65, 197, 211, 189, 192, 4, 253, 52, 63, 223, 176, 49, 64, 218, 148, 122, 63, 40, 40, 200, 192, 208, 22, 141, 64, 38, 207, 216, 192]);
    operand_1: f32[24] @bytes([174, 247, 196, 192, 54, 191, 128, 192, 175, 123, 190, 64, 185, 159, 19, 64, 13, 59, 49, 192, 84, 155, 120, 191, 69, 113, 156, 63, 108, 227, 146, 64, 166, 158, 17, 65, 125, 231, 159, 192, 89, 213, 153, 192, 179, 181, 14, 65, 89, 135, 102, 63, 105, 218, 53, 192, 161, 254, 52, 192, 114, 173, 7, 65, 217, 230, 250, 192, 98, 108, 19, 65, 137, 111, 159, 64, 235, 119, 32, 192, 146, 147, 144, 192, 21, 158, 5, 65, 131, 39, 197, 192, 37, 138, 60, 63]);
  }

  nodes {
    [output] = greater(operand_0, operand_1, label="");
  }

  outputs { output; }
}
